# SendBox

./: .gitignore  LICENSE  README.md  job_log.txt  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  sendbox.jks
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/services/: localsender_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/utils/: theme.dart
lib/views/: dashboard_view.dart  discovery_view.dart  home_page.dart  settings_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  index.html  lib.rs  mdns.rs  server.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/: run_build_tool.cmd
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_localsender.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_localsender.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
