[package]
name = "rust_lib_localsender"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
flutter_rust_bridge_codegen = "=2.12.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
flutter_rust_bridge = "=2.12.0"
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
mdns-sd = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5"
uuid = { version = "1.3", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
anyhow = "1.0"
once_cell = "1.19"
futures-util = "0.3"
percent-encoding = "2.3"
tower-http = { version = "0.5", features = ["cors"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
